modified:   Entry.html

--- a/Entry.html
+++ b/Entry.html
@@ -35,28 +35,28 @@
             height: auto;
         }
         .flowchart .box ul {
-            list-style-type: none; /* Removes default bullets */
+            list-style-type: none;
             padding: 0;
-            margin: 0 auto; /* Centers the list */
-            text-align: left; /* Aligns the text to the left */
-            display: table; /* Allows the list to shrink to fit content and center */
+            margin: 0 auto;
+            text-align: left;
+            display: table;
         }
 
         .flowchart .box li::before {
-            content: "• "; /* Adds a bullet before the list item */
-            color: #007bff; /* Bullet color */
-            display: inline-block; /* Align with your text */
-            margin-left: 5px; /* Spacing before bullet */
+            content: "• ";
+            color: #007bff;
+            display: inline-block;
+            margin-left: 5px;
         }
 
         .flowchart .box a {
-            font-family: 'Roboto', sans-serif; /* Changes font to Roboto */
-            color: #0654ba; /* Link color */
-            text-decoration: none; /* No underline */
+            font-family: 'Roboto', sans-serif;
+            color: #0654ba;
+            text-decoration: none;
         }
 
         .flowchart .box a:hover {
-            text-decoration: underline; /* Underline on hover */
+            text-decoration: underline;
         }
 
         .alert-section {
@@ -118,7 +118,7 @@
             <div class="box">
                 <h2>Step 1: Email Christine and Dane</h2>
                 <p>When a newborn joins a family, a child is reunited with a parent, or anyone is added to a lease for any reason, notify the data team promptly. Your notification should include the person's name and birthdate.</p>
-                <img src="https://via.placeholder.com/400x200" alt="Email Notification Image"/>
+                <img src="https://housinghopedata.site/OUTLOOK_1AuXR9RCC0.png" alt="Email Notification Image"/>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
@@ -140,7 +140,7 @@
             <div class="box">
                 <h2>Step 4: Submit Documents</h2>
                 <p>Submit scanned copies of the birth certificate and social security card to the Participant Profile Folder as soon as possible after entry.</p>
-                <img src="https://via.placeholder.com/400x200" alt="Submit Documents Image"/>
+                <img src="/mnt/data/A_person_scanning_documents_using_a_scanner,_with_.png" alt="Submit Documents Image"/>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
