--- a/Entry.html
+++ b/Entry.html
@@ -131,12 +131,13 @@
                 <p>In order to completely enter the necessary data for HMIS you must complete:</p>
                 <ul>
                     <li>Signed HMIS form by parent/self if the entrant is an adult (at the time of entry).</li>
-                    <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of entry).</li>
-                    <p><a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf">Occupancy/Departure Guide</a></p>
+                    <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of entry). <br>
+                        <a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf">Occupancy/Departure Guide</a>
+                    </li>
                     <li>Completed Entry Child/Adult Assessment (as soon as possible after entry).</li>
                     <li>Submit scanned birth certificate and social security card to Participant Profile Folder (as soon as possible after entry).</li>
                 </ul>
-                <img src="/mnt/data/A_person_scanning_documents_using_a_scanner,_with_.png" alt="Submit Documents Image"/>
+                <img src="file:///mnt/data/A_person_scanning_documents_using_a_scanner,_with_.png" alt="Submit Documents Image"/>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
