modified:   Entry.html

--- a/Entry.html
+++ b/Entry.html
@@ -74,6 +74,11 @@
             font-size: 2rem;
             margin-bottom: 0.5rem;
         }
+
+        .tabbed-link {
+            display: block;
+            margin-left: 20px; /* Adjust as needed for proper indentation */
+        }
     </style>
 </head>
 <body>
@@ -131,8 +136,8 @@
                 <p>In order to completely enter the necessary data for HMIS you must complete:</p>
                 <ul>
                     <li>Signed HMIS form by parent/self if the entrant is an adult (at the time of entry).</li>
-                    <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of entry). <br>
-                        <a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf">      -Occupancy/Departure Guide</a>
+                    <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of entry).<br>
+                        <a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf" class="tabbed-link">Occupancy/Departure Guide</a>
                     </li>
                     <li>Completed Entry Child/Adult Assessment (as soon as possible after entry).</li>
                     <li>Submit scanned birth certificate and social security card to Participant Profile Folder (as soon as possible after entry).</li>
