modified:   Entry.html 	new file:   converted_image.jpg

--- a/Entry.html
+++ b/Entry.html
@@ -129,6 +129,7 @@
             <div class="box">
                 <h2>Step 2: Add to Apricot Property</h2>
                 <p>Upon receiving this information, the resident will be added to your Apricot property.</p>
+                <img src="https://housinghopedata.site/converted_image.jpg" alt="Add to Apricot Property Image"/>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
@@ -142,7 +143,7 @@
                     <li>Completed Entry Child/Adult Assessment (as soon as possible after entry).</li>
                     <li>Submit scanned birth certificate and social security card to Participant Profile Folder (as soon as possible after entry).</li>
                 </ul>
-                <img src="file:///mnt/data/A_person_scanning_documents_using_a_scanner,_with_.png" alt="Submit Documents Image"/>
+                <img src="/mnt/data/A_person_scanning_documents_using_a_scanner,_with_.png" alt="Submit Documents Image"/>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
