modified:   Entry.html 	modified:   Prog.html 	modified:   UnitDesignations.html 	modified:   flowchart.html 	modified:   index.html

--- a/flowchart.html
+++ b/flowchart.html
@@ -80,7 +80,10 @@
                         <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">ADP Flowchart</a>
+                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Entry.html">Adding Family Members</a>
                     </li>
                 </ul>
             </div>
