--- a/Entry.html
+++ b/Entry.html
@@ -105,10 +105,10 @@
                         <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ADP Flowchart</a>
+                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Adding Family Members</a>
+                        <a class="nav-link active" aria-current="page" href="Entry.html">Adding Family Members</a>
                     </li>
                 </ul>
             </div>
