--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -51,6 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Entry.html">Adding Family Members</a>
+                    </li>
                 </ul>
             </div>
         </div>
