modified:   Entry.html

--- a/Entry.html
+++ b/Entry.html
@@ -144,7 +144,7 @@
                     <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of entry).<br>
                         <a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf" class="tabbed-link">Occupancy/Departure Guide</a>
                     </li>
-                    <li>Completed Entry Child/Adult Assessment (as soon as possible after entry).</li>
+                    <li>Completed Entry Child/Adult Assessment (at time of entry).</li>
                     <li>Submit scanned birth certificate and social security card to Participant Profile Folder (as soon as possible after entry).</li>
                 </ul>
                 <img src="https://housinghopedata.site/converted_image.jpg" alt="Submit Documents Image" class="scaled-image"/>
