modified:   Exit.html

--- a/Exit.html
+++ b/Exit.html
@@ -108,6 +108,10 @@
                         <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Entry.html">Adding Family Members</a>
+                    </li>                    
+                    
+                    <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="Exit.html">Exiting Families</a>
                     </li>
                 </ul>
@@ -116,30 +120,22 @@
     </nav>
 
     <main class="container">
-        <div class="alert-section">
-            <div class="alert-icons">⚠️⚠️⚠️</div>
-            <div class="alert-text">Guidelines for Exiting Families Coming Soon</div>
-        </div>
-        <div class="mb-5 text-center">
-            <p>We are working to provide detailed guidelines for exiting families. Stay tuned for updates!</p>
-        </div>
 
         <div class="flowchart">
             <div class="box">
                 <h2>Step 1: Remove from Apricot Property</h2>
-                <p>Upon receiving this information, the family will be removed from your Apricot property.</p>
+                <p>Upon receiving the information that a resident will be leaving, prepare plans to complete the required exit interview.</p>
             </div>
             <div class="arrow">↓</div>
             <div class="box">
                 <h2>Step 2: Complete Required Forms</h2>
                 <p>In order to complete the exit process for HMIS you must complete:</p>
                 <ul>
-                    <li>Signed HMIS form by parent/self if the family member is an adult (at the time of exit).</li>
                     <li>Occupancy/Departure Form (available in Apricot under the Household Profile) (at the time of exit).<br>
                         <a href="https://housinghopedata.site/Occupancy%20Departure%20Guide.pdf" class="tabbed-link">Occupancy/Departure Guide</a>
                     </li>
                     <li>Completed Exit Child/Adult Assessment (at time of exit).</li>
-                    <li>Completed Exit from Homeless Housing Datasheet (at time of exit).<br>
+                    <li>Completed Exit from Homeless Housing Datasheet (available in Apricot under the Household Profile) (at time of exit).<br>
                         <a href="https://housinghopedata.site/Exit%20from%20Homeless%20Housing%20Datasheet%20Guide2.pdf" class="tabbed-link">Exit from Homeless Housing Datasheet Guide</a>
                     </li>
                 </ul>
