modified:   Entry.html modified:   Exit.html 	modified:   Prog.html 	modified:   UnitDesignations.html 	modified:   flowchart.html 	modified:   index.html

--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -52,7 +52,11 @@
                         <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Entry.html">Adding Family Members</a>
+                        <a class="nav-link" href="Entry.html">Adding Family Members</a>
+                    </li>                    
+                    
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Exit.html">Exiting Families</a>
                     </li>
                 </ul>
             </div>
