modified:   Exit.html

--- a/Exit.html
+++ b/Exit.html
@@ -123,7 +123,7 @@
 
         <div class="flowchart">
             <div class="box">
-                <h2>Step 1: Remove from Apricot Property</h2>
+                <h2>Step 1: Be prepared to exit outgoing residents</h2>
                 <p>Upon receiving the information that a resident will be leaving, prepare plans to complete the required exit interview.</p>
             </div>
             <div class="arrow">↓</div>
