--- a/navbar.html
+++ b/navbar.html
@@ -21,11 +21,30 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Entry.html">Adding Family Members</a>
                 </li>                    
-                
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Exit.html">Exiting Families</a>
+                    <a class="nav-link" href="Exit.html">Exiting Families</a>
+                </li>
+                <!-- New link added for Move-In/Update Assessments -->
+                <li class="nav-item">
+                    <a class="nav-link" href="updates.html">Move-In/Update Assessments</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<script>
+    // Get the current path and filename
+    var currentPath = window.location.pathname.split("/").pop();
+
+    // Get all the nav links
+    var navLinks = document.querySelectorAll('.nav-link');
+
+    // Loop through the links to find the one that matches the current page
+    navLinks.forEach(function(link) {
+        if(link.getAttribute('href') === currentPath) {
+            link.classList.add('active'); // Add the active class
+            link.setAttribute('aria-current', 'page'); // Set aria-current attribute
+        }
+    });
+</script>
