--- a/Prog.html
+++ b/Prog.html
@@ -52,37 +52,9 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">HH Data Team Infobase</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Prog.html">Program Guide</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Entry.html">Adding Family Members</a>
-                    </li>                    
-                    
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Exit.html">Exiting Families</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Navbar placeholder where the external navbar will be loaded -->
+    <div id="navbar-placeholder"></div>
+
     <div class="container">
         <header class="guide-header">
             <h1>How to Find a Resident's Program Enrollment</h1>
@@ -120,7 +92,17 @@
         </div>
     </div>
     <a href="index.html" class="btn btn-dark" style="position: fixed; bottom: 20px; right: 20px;">Home</a>
+    
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Load external navbar -->
+    <script>
+        // Fetch and insert the navbar
+        fetch('navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-placeholder').innerHTML = data;
+            });
+    </script>
 </body>
 </html>
