--- a/flowchart.html
+++ b/flowchart.html
@@ -35,64 +35,31 @@
             height: auto;
         }
         .flowchart .box ul {
-            list-style-type: none; /* Removes default bullets */
+            list-style-type: none;
             padding: 0;
-            margin: 0 auto; /* Centers the list */
-            text-align: left; /* Aligns the text to the left */
-            display: table; /* Allows the list to shrink to fit content and center */
+            margin: 0 auto;
+            text-align: left;
+            display: table;
         }
-
         .flowchart .box li::before {
-            content: "• "; /* Adds a bullet before the list item */
-            color: #007bff; /* Bullet color */
-            display: inline-block; /* Align with your text */
-            margin-left: 5px; /* Spacing before bullet */
+            content: "• ";
+            color: #007bff;
+            display: inline-block;
+            margin-left: 5px;
         }
-
         .flowchart .box a {
-            font-family: 'Roboto', sans-serif; /* Changes font to Roboto */
-            color: #0654ba; /* Link color */
-            text-decoration: none; /* No underline */
+            font-family: 'Roboto', sans-serif;
+            color: #0654ba;
+            text-decoration: none;
         }
-
-
         .flowchart .box a:hover {
-            text-decoration: underline; /* Underline on hover */
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">HH Data Team Infobase</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Prog.html">Program Guide</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Entry.html">Adding Family Members</a>
-                    </li>                    
-                    
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Exit.html">Exiting Families</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Navbar placeholder where the external navbar will be loaded -->
+    <div id="navbar-placeholder"></div>
 
     <main class="container">
         <h1>ADP Note Updating Process Flowchart</h1>
@@ -118,18 +85,17 @@
                     <a href="https://apricot.socialsolutions.com/report/run/report_id/138">Click here for a list of the program enrollment for all of your residents. Click export to download an Excel Spreadsheet.</a>
                 </h5>
             </div>
-            </div>
             <div class="arrow">↓</div>
             <div class="box">
                 <h2>Access Timecard</h2>
                 <p>Log in to ADP and navigate to <strong>Myself → My Timecard</strong>.</p>
-                <img src="11.png"/>
+                <img src="11.png" alt="Access Timecard" />
             </div>
             <div class="arrow">↓</div>
             <div class="box">
                 <h2>Edit Timecard</h2>
                 <p>Click on the three lines beside a completed row to bring up options.</p>
-                <img src="12.png" />
+                <img src="12.png" alt="Edit Timecard" />
             </div>
             <div class="arrow">↓</div>
             <div class="box">
@@ -137,7 +103,6 @@
                 <p>Select <strong>Add Note</strong> on desktop or <strong>Add Comment</strong> on mobile.</p>
             </div>
             <div class="arrow">↓</div>
-            <div class="flowchart">
             <div class="box">
                 <h2>Enter Data</h2>
                 <p>For each unique program, even if residents are at the same property, create a separate line item:</p>
@@ -146,8 +111,7 @@
                     <li>Station Place / Family Support Coach Services / PSH / 4 hours</li>
                 </ul>
                 <p>Note: If program names and property names are the same, use the property name for the program name.</p>
-                <img src="13.png" />
-            </div>
+                <img src="13.png" alt="Enter Data" />
             </div>
             <div class="arrow">↓</div>
             <div class="box">
@@ -165,5 +129,14 @@
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Load external navbar -->
+    <script>
+        // Fetch and insert the navbar
+        fetch('navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-placeholder').innerHTML = data;
+            });
+    </script>
 </body>
 </html>
