--- a/updates.html
+++ b/updates.html
@@ -5,41 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Important guidelines for assessments during a project stay, as per HUD.">
   <title>HUD Assessment Guidelines</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
+      padding-top: 5rem;
       font-family: Arial, sans-serif;
       background-color: #f7f7f7;
       color: #333;
-      margin: 0;
-      padding: 20px;
-    }
-
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      margin: 0;
     }
 
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: 20px auto;
-      padding: 20px;
+      padding: 2rem;
       background-color: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
     }
 
-    h2, h3 {
-      color: #4CAF50;
+    h1, h2, h3 {
+      color: #007bff;
     }
 
-    p {
+    p, ul {
+      font-size: 1rem;
       line-height: 1.6;
-      font-size: 16px;
     }
 
     ul {
@@ -55,14 +46,32 @@
       margin-top: 40px;
       color: #777;
     }
+
+    /* Responsive font adjustments */
+    @media (max-width: 768px) {
+      .container {
+        padding: 1rem;
+      }
+      h1 {
+        font-size: 1.75rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+      h3 {
+        font-size: 1.25rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>HUD Assessment Guidelines</h1>
-  </header>
+
+  <!-- Navbar placeholder -->
+  <div id="navbar-placeholder"></div>
 
   <div class="container">
+    <h1>HUD Assessment Guidelines</h1>
+
     <h2>Move-in Assessment</h2>
     <p>
       There is no requirement to complete a new assessment upon move-in. However, HUD guidelines indicate the need for specific records during the project stay, especially when income or household changes occur.
@@ -124,12 +133,22 @@
       <li>Chronic Health Condition</li>
       <li>Mental Health Disorder</li>
     </ul>
-
   </div>
 
   <footer>
     <p>&copy; 2024 HUD Assessment Guidelines</p>
   </footer>
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Load external navbar -->
+  <script>
+    // Fetch and insert the navbar
+    fetch('navbar.html')
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById('navbar-placeholder').innerHTML = data;
+      });
+  </script>
 </body>
 </html>
-
