--- a/updates.html
+++ b/updates.html
@@ -10,56 +10,93 @@
   <style>
     body {
       padding-top: 5rem;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       background-color: #f7f7f7;
       color: #333;
     }
 
     .container {
-      max-width: 900px;
-      margin: 20px auto;
+      max-width: 1000px;
+      margin: 0 auto;
       padding: 2rem;
-      background-color: white;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      border-radius: 5px;
+      background-color: #fff;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
-    h1, h2, h3 {
+    h1 {
       color: #007bff;
+      text-align: center;
+      margin-bottom: 2rem;
+      font-weight: 600;
+      font-size: 2.5rem;
     }
 
-    p, ul {
-      font-size: 1rem;
-      line-height: 1.6;
+    h2 {
+      color: #007bff;
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
+      font-size: 1.75rem;
+    }
+
+    h3 {
+      color: #0056b3;
+      margin-top: 1.2rem;
+      margin-bottom: 1rem;
+      font-size: 1.5rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      line-height: 1.8;
+      margin-bottom: 1.5rem;
+      text-align: justify;
     }
 
     ul {
-      margin-left: 20px;
+      font-size: 1.1rem;
+      margin-left: 1.5rem;
+      margin-bottom: 1.5rem;
     }
 
     ul li {
-      margin-bottom: 10px;
+      margin-bottom: 0.75rem;
     }
 
     footer {
       text-align: center;
-      margin-top: 40px;
+      margin-top: 2rem;
       color: #777;
+      font-size: 0.9rem;
     }
 
-    /* Responsive font adjustments */
+    /* Make sure the content doesn't stretch too much on large screens */
+    @media (min-width: 1400px) {
+      .container {
+        max-width: 80%;
+      }
+    }
+
+    /* Responsive adjustments */
     @media (max-width: 768px) {
       .container {
-        padding: 1rem;
+        padding: 1.5rem;
       }
+
       h1 {
-        font-size: 1.75rem;
+        font-size: 2rem;
       }
+
       h2 {
         font-size: 1.5rem;
       }
+
       h3 {
         font-size: 1.25rem;
+      }
+
+      p, ul {
+        font-size: 1rem;
       }
     }
   </style>
