--- a/updates.html
+++ b/updates.html
@@ -5,99 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Important guidelines for assessments during a project stay, as per HUD.">
   <title>HUD Assessment Guidelines</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Styles -->
   <style>
     body {
-      padding-top: 5rem;
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #f7f7f7;
       color: #333;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 2rem;
-      background-color: #fff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
+      margin: 0;
+      padding: 20px;
     }
 
     h1 {
-      color: #007bff;
-      text-align: center;
-      margin-bottom: 2rem;
-      font-weight: 600;
-      font-size: 2.5rem;
+      margin: 0;
     }
 
-    h2 {
-      color: #007bff;
-      margin-top: 1.5rem;
-      margin-bottom: 1rem;
-      font-size: 1.75rem;
+    .container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
-    h3 {
-      color: #0056b3;
-      margin-top: 1.2rem;
-      margin-bottom: 1rem;
-      font-size: 1.5rem;
+    h2, h3 {
+      color: #4CAF50;
     }
 
     p {
-      font-size: 1.1rem;
-      line-height: 1.8;
-      margin-bottom: 1.5rem;
-      text-align: justify;
+      line-height: 1.6;
+      font-size: 16px;
     }
 
     ul {
-      font-size: 1.1rem;
-      margin-left: 1.5rem;
-      margin-bottom: 1.5rem;
+      margin-left: 20px;
     }
 
     ul li {
-      margin-bottom: 0.75rem;
+      margin-bottom: 10px;
     }
 
     footer {
       text-align: center;
-      margin-top: 2rem;
+      margin-top: 40px;
       color: #777;
-      font-size: 0.9rem;
-    }
-
-    /* Make sure the content doesn't stretch too much on large screens */
-    @media (min-width: 1400px) {
-      .container {
-        max-width: 80%;
-      }
-    }
-
-    /* Responsive adjustments */
-    @media (max-width: 768px) {
-      .container {
-        padding: 1.5rem;
-      }
-
-      h1 {
-        font-size: 2rem;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-      }
-
-      h3 {
-        font-size: 1.25rem;
-      }
-
-      p, ul {
-        font-size: 1rem;
-      }
     }
   </style>
 </head>
