--- a/updates.html
+++ b/updates.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Important guidelines for assessments during a project stay, as per HUD.">
   <title>HUD Assessment Guidelines</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Styles -->
   <style>
     body {
