--- a/updates.html
+++ b/updates.html
@@ -14,7 +14,7 @@
       background-color: #f7f7f7;
       color: #333;
       margin: 0;
-      padding: 20px;
+      padding-top: 5rem; /* Adding padding to the top of the page to create space between navbar and content */
     }
 
     h1 {
