modified:   updates.html

--- a/updates.html
+++ b/updates.html
@@ -69,7 +69,7 @@
 
     <h2>Income and Sources</h2>
     <p>
-      An <strong>Income and Sources</strong> record must be created during the project stay if there is any change in income or sources. This includes:
+      An <strong>Income and Sources</strong> record must be created during the project stay if there is any change in income or sources, at any time during the resident's stay at Housing Hope. This includes:
     </p>
     <ul>
       <li>When a minor child enters or leaves the household, leading to a change in household income.</li>
