--- a/updates.html
+++ b/updates.html
@@ -58,7 +58,7 @@
       justify-content: center;
       align-items: center;
       margin: 40px 0;
-      background-color: #e0f7fa; /* Light background for the summary */
+      background-color: #7a7a7a; /* Light background for the summary */
       padding: 20px;
       border-radius: 10px;
     }
@@ -69,7 +69,7 @@
     }
 
     .summary-content h2 {
-      color: #00796b; /* Darker green for heading */
+      color: #001654; /* Darker green for heading */
     }
 
     .summary-content ul {
