modified:   updates.html

--- a/updates.html
+++ b/updates.html
@@ -161,7 +161,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2024 HUD Assessment Guidelines</p>
+    <p>&copy; Housing Hope Data Team 2024</p>
   </footer>
 
   <!-- Bootstrap Bundle with Popper -->
