--- a/updates.html
+++ b/updates.html
@@ -12,7 +12,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f7f7f7;
-      color: #333;
+      color: #b0b0b0;
       margin: 0;
       padding-top: 5rem; /* Adding padding to the top of the page to create space between navbar and content */
     }
@@ -58,7 +58,7 @@
       justify-content: center;
       align-items: center;
       margin: 40px 0;
-      background-color: #7a7a7a; /* Light background for the summary */
+      background-color: #fff8d4; /* Light background for the summary */
       padding: 20px;
       border-radius: 10px;
     }
@@ -69,7 +69,7 @@
     }
 
     .summary-content h2 {
-      color: #001654; /* Darker green for heading */
+      color: #000000; /* Darker green for heading */
     }
 
     .summary-content ul {
