modified:   updates.html

--- a/updates.html
+++ b/updates.html
@@ -12,7 +12,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f7f7f7;
-      color: #b0b0b0;
+      color: #000000;
       margin: 0;
       padding-top: 5rem; /* Adding padding to the top of the page to create space between navbar and content */
     }
