--- a/updates.html
+++ b/updates.html
@@ -58,7 +58,7 @@
       justify-content: center;
       align-items: center;
       margin: 40px 0;
-      background-color: #fff8d4; /* Light background for the summary */
+      background-color: #dbffd9; /* Light background for the summary */
       padding: 20px;
       border-radius: 10px;
     }
@@ -94,7 +94,8 @@
 
   <div class="container">
     <h1>HUD Assessment Guidelines</h1>
-
+<h3>  </h3>
+<h3>  </h3>
     <h2>Move-in Assessment</h2>
     <p>
       There is no requirement to complete a new assessment upon move-in. However, HUD guidelines indicate the need for specific records during the project stay, especially when income or household changes occur.
