new file:   definitions.html 	modified:   navbar.html 	modified:   updates.html

--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">HH Data Team Infobase</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" 
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -24,9 +25,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Exit.html">Exiting Families</a>
                 </li>
-                <!-- New link added for Move-In/Update Assessments -->
                 <li class="nav-item">
                     <a class="nav-link" href="updates.html">Move-In/Update Assessments</a>
+                </li>
+                <!-- New link added for Homelessness Definitions -->
+                <li class="nav-item">
+                    <a class="nav-link" href="definitions.html">Homelessness Definitions</a>
                 </li>
             </ul>
         </div>
