--- a/updates.html
+++ b/updates.html
@@ -142,13 +142,13 @@
     <div class="summary-container">
       <div class="summary-content">
         <h2>Summary</h2>
-        <p><strong>Must Update:</strong></p>
+        <p><strong>Must Update HUD upon any changes:</strong></p>
         <ul>
           <li>Income and Non-Cash Benefits</li>
           <li>Domestic Violence</li>
           <li>Health Insurance</li>
         </ul>
-        <p><strong>Should Update:</strong></p>
+        <p><strong>Recommended to update HUD upon any changes:</strong></p>
         <ul>
           <li>Substance Use</li>
           <li>Physical Disability</li>
