modified:   navbar.html

--- a/navbar.html
+++ b/navbar.html
@@ -30,7 +30,7 @@
                 </li>
                 <!-- New link added for Homelessness Definitions -->
                 <li class="nav-item">
-                    <a class="nav-link" href="definitions.html">Homelessness Definitions</a>
+                    <a class="nav-link" href="definitions.html">What is Chronic Homelessness?</a>
                 </li>
             </ul>
         </div>
