--- a/definitions.html
+++ b/definitions.html
@@ -26,46 +26,8 @@
 </head>
 <body>
 
-    <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">HH Data Team Infobase</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" 
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Prog.html">Program Guide</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="UnitDesignations.html">Unit Dictionary</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="flowchart.html">ADP Flowchart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Entry.html">Adding Family Members</a>
-                    </li>                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="Exit.html">Exiting Families</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="updates.html">Move-In/Update Assessments</a>
-                    </li>
-                    <!-- New link added for Homelessness Definitions -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="definitions.html">Homelessness Definitions</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar End -->
+    <!-- Navbar Placeholder -->
+    <div id="navbar-placeholder"></div>
 
     <!-- Page Content Start -->
     <div class="container mt-4">
@@ -120,20 +82,45 @@
 
     <!-- Bootstrap JS and dependencies (Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- JavaScript to Load Navbar -->
     <script>
-        // Get the current path and filename
-        var currentPath = window.location.pathname.split("/").pop();
+        // Function to load the navbar
+        async function loadNavbar() {
+            try {
+                const response = await fetch('navbar.html');
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const navbarHTML = await response.text();
+                document.getElementById('navbar-placeholder').innerHTML = navbarHTML;
 
-        // Get all the nav links
-        var navLinks = document.querySelectorAll('.nav-link');
-
-        // Loop through the links to find the one that matches the current page
-        navLinks.forEach(function(link) {
-            if(link.getAttribute('href') === currentPath) {
-                link.classList.add('active'); // Add the active class
-                link.setAttribute('aria-current', 'page'); // Set aria-current attribute
+                // After loading the navbar, execute the active link script
+                setActiveNavLink();
+            } catch (error) {
+                console.error('Error loading navbar:', error);
             }
-        });
+        }
+
+        // Function to set the active nav link
+        function setActiveNavLink() {
+            // Get the current path and filename
+            var currentPath = window.location.pathname.split("/").pop();
+
+            // Get all the nav links
+            var navLinks = document.querySelectorAll('.nav-link');
+
+            // Loop through the links to find the one that matches the current page
+            navLinks.forEach(function(link) {
+                if(link.getAttribute('href') === currentPath) {
+                    link.classList.add('active'); // Add the active class
+                    link.setAttribute('aria-current', 'page'); // Set aria-current attribute
+                }
+            });
+        }
+
+        // Load the navbar when the DOM is fully loaded
+        document.addEventListener('DOMContentLoaded', loadNavbar);
     </script>
 </body>
 </html>
