--- a/definitions.html
+++ b/definitions.html
@@ -31,24 +31,29 @@
 
     <!-- Page Content Start -->
     <div class="container mt-4">
+        <!-- Homeless (Literal Homelessness) Section -->
         <section id="homeless" class="content-section">
             <h2>1. Homeless</h2>
             <h3>Definition:</h3>
             <p>
-                According to HUD, an individual or family is considered <strong>homeless</strong> if they lack a fixed, regular, and adequate nighttime residence. This broad category includes several subgroups:
+                According to HUD, an individual or family is considered <strong>homeless</strong> if they lack a fixed, regular, and adequate nighttime residence. This broad category encompasses what is specifically defined as <strong>Literal Homelessness</strong>. It includes:
             </p>
             <ul>
                 <li><strong>Unsheltered:</strong> Individuals living in places not designed for human habitation, such as streets, parks, vehicles, abandoned buildings, or other public spaces.</li>
                 <li><strong>Sheltered:</strong> Individuals residing in emergency shelters, transitional housing programs, or other temporary accommodations provided by shelters.</li>
                 <li><strong>Imminent Risk of Homelessness:</strong> Individuals who are at immediate risk of losing their current housing and becoming homeless (e.g., facing eviction or foreclosure).</li>
+                <li><strong>Category 4 - DV Survivors:</strong> Survivors of domestic violence (DV) fleeing dangerous situations without safe alternative housing.</li>
             </ul>
             <h3>Key Points:</h3>
             <ul>
-                <li>Homelessness encompasses a variety of living situations, from those with temporary shelter to those living in public or improvised spaces.</li>
-                <li>It includes both individuals and families experiencing homelessness.</li>
+                <li><strong>Literal Homelessness:</strong> Encompasses individuals and families without a fixed, regular, and adequate nighttime residence.</li>
+                <li>Includes those living in shelters, on the streets, in vehicles, abandoned buildings, or other unsuitable locations.</li>
+                <li>DV survivors are recognized under this category when they flee dangerous environments without safe housing alternatives.</li>
+                <li>Recognizes the immediate needs and vulnerabilities of individuals in precarious living situations.</li>
             </ul>
         </section>
 
+        <!-- Chronically Homeless Section -->
         <section id="chronically-homeless" class="content-section">
             <h2>2. Chronically Homeless</h2>
             <h3>Definition:</h3>
@@ -67,10 +72,11 @@
             </ul>
         </section>
 
+        <!-- Summary Section -->
         <section class="summary content-section">
             <h2>Summary</h2>
             <ul>
-                <li><strong>Homeless:</strong> A broad category encompassing individuals and families without a stable nighttime residence, including those in shelters, transitional housing, or unsheltered environments.</li>
+                <li><strong>Homeless:</strong> Individuals and families lacking a fixed, regular, and adequate nighttime residence, including those in shelters, transitional housing, unsheltered environments, and DV survivors fleeing dangerous situations (Category 4).</li>
                 <li><strong>Chronically Homeless:</strong> A subset of the homeless population with long-term or repeated homelessness coupled with a disabling condition that hinders their ability to maintain stable housing.</li>
             </ul>
             <p>
@@ -83,7 +89,7 @@
     <!-- Bootstrap JS and dependencies (Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
-    <!-- JavaScript to Load Navbar -->
+    <!-- JavaScript to Load Navbar and Set Active Link -->
     <script>
         // Function to load the navbar
         async function loadNavbar() {
