modified:   UnitDesignations.html

--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -104,6 +104,27 @@
                 </div>
             </div>
         </div>
+
+        <!-- Chemical Dependency Mental Health (CDMH) -->
+        <div class="card" id="cdmh">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h2 class="card-title">Chemical Dependency Mental Health (CDMH)</h2>
+                        <p class="card-text">CDMH-designated units are housing units specifically set aside for individuals experiencing both substance use disorders and mental health issues. These units are often part of Permanent Supportive Housing (PSH) programs, providing stable housing combined with supportive services to address the complex needs of this population.</p>
+                        <h5>Goals of the CDMH Program</h5>
+                        <p class="card-text">The primary goal of housing individuals in CDMH units is to offer stability through a Housing First approach, meaning housing is provided without preconditions such as sobriety or treatment compliance. Once housed, individuals can better engage in supportive services aimed at recovery and overall health. Housing reduces the stress and instability that exacerbate mental health and substance use issues. CDMH programs aim to improve quality of life, reduce homelessness, and lower public costs related to emergency services, incarceration, and hospitalizations.</p>
+                        <h5>Why House CDMH Individuals?</h5>
+                        <p class="card-text">Housing people experiencing mental health and chemical dependency helps stabilize their living situation, which is often a key barrier to effective treatment. When individuals have a safe place to live, they are more likely to access and benefit from services such as counseling, substance use treatment, and case management. Stable housing reduces the risk of relapse and the negative impacts of homelessness, including physical health deterioration and increased interactions with law enforcement.</p>
+                    </div>
+                    <div class="col-md-4 qualification">
+                        <h5>Qualification</h5>
+                        <span class="badge bg-danger">Chronically Homeless</span>
+                        <p class="mt-2">Requires chronic homelessness and severe mental health or substance use disorders that significantly impair the ability to live independently. Entry assessments may be required to confirm the need for both housing and treatment services.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         
         <!-- Emergency Shelter -->
         <div class="card" id="shelter">
