--- a/UnitDesignations.html
+++ b/UnitDesignations.html
@@ -116,7 +116,7 @@
                     <div class="col-md-4 qualification">
                         <h5>Qualification</h5>
                         <span class="badge bg-danger">Chronically Homeless</span>
-                        <p class="mt-2">Requires chronic homelessness and significant mental health and substance use challenges.</p>
+                        <p class="mt-2">Requires chronic homelessness and significant mental health or substance use challenges.</p>
                     </div>
                 </div>
             </div>
