modified:   index.html

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="row align-items-md-stretch">
             <div class="col-md-4">
                 <div class="h-100 p-5 text-white bg-dark rounded-3">
-                    <h2>ADP Note Updating Process Flowchart</h2>
-                    <p>Explore step-by-step instructions to update notes effectively within ADP.</p>
-                    <a href="flowchart.html" class="btn btn-outline-light" type="button">View Flowchart</a>
+                    <h2>Homelessness Definitions</h2>
+                    <p>Understand the distinctions between Chronic and Literal Homelessness.</p>
+                    <a href="HomelessnessDefinitions.html" class="btn btn-outline-light" type="button">Learn More</a>
                 </div>
             </div>
             <div class="col-md-4">
