modified:   updates.html

--- a/updates.html
+++ b/updates.html
@@ -98,7 +98,7 @@
 <h3>  </h3>
     <h2>Move-in Assessment</h2>
     <p>
-      There is no requirement to complete a new assessment upon move-in. However, HUD guidelines indicate the need for specific records during the project stay, especially when income or household changes occur.
+      There is no requirement to complete a new assessment upon move-in. However, HUD guidelines indicate the need for updating specific records during the project stay, when income or household changes occur.
     </p>
 
     <h2>Income and Sources</h2>
