modified:   updates.html

--- a/updates.html
+++ b/updates.html
@@ -112,6 +112,9 @@
     <p>
       If income shifts between household members, an additional record must be created to reflect this. 'Information Date' for these records should match the date of data collection.
     </p>
+    <p>
+      <strong>Important:</strong> Whenever the Income and Sources section is updated, the Employment section must also be completed to ensure all related information is current and accurate.
+    </p>
 
     <h3>Additional Required Records</h3>
     <p>
@@ -144,7 +147,7 @@
         <h2>Summary</h2>
         <p><strong>Must Update HUD upon any changes:</strong></p>
         <ul>
-          <li>Income and Non-Cash Benefits</li>
+          <li>Income and Non-Cash Benefits (including Employment)</li>
           <li>Domestic Violence</li>
           <li>Health Insurance</li>
         </ul>
