modified:   Crisis.html

--- a/Crisis.html
+++ b/Crisis.html
@@ -133,10 +133,10 @@
         </div>
 
         <div class="call-kat">
-            📞 <strong>FIRST (Non-Emergency): Call Kat at <a href="tel:6194037052">619-403-7052</a></strong>
+            📞 <strong>FIRST: Call Kat at <a href="tel:6194037052">619-403-7052</a></strong>
         </div>
         <div class="call-monica">
-            📞 <strong>SECOND (Non-Emergency): Call Monica at <a href="tel:2063496854">206-349-6854</a></strong>
+            📞 <strong>SECOND: Call Monica at <a href="tel:2063496854">206-349-6854</a></strong>
         </div>
 
         <p><strong>📝 Report Form:</strong><br>
