--- a/Crisis.html
+++ b/Crisis.html
@@ -83,6 +83,7 @@
     }
     details {
       margin-top: 1.5rem;
+      margin-bottom: 0;
       border: 1px solid var(--muted-border-color);
       border-radius: var(--border-radius);
       background-color: var(--card-background-color);
@@ -109,13 +110,17 @@
         margin-left: 1.5rem; /* Indent lists */
      }
     footer {
-        margin-top: 0.15rem;
+        margin-top: 0;
         text-align: center;
     }
     footer p {
       margin-bottom: 0.25rem;
       font-size: var(--font-size-sm);
       color: var(--muted-color);
+    }
+    footer hr {
+      margin-top: 0;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
