--- a/Crisis.html
+++ b/Crisis.html
@@ -122,6 +122,29 @@
       margin-top: 0;
       margin-bottom: 1rem;
     }
+    main {
+      margin-bottom: 0;
+    }
+    details:last-child {
+      margin-bottom: 0;
+    }
+    main, details, footer {
+      margin: 0;
+      padding-bottom: 0;
+    }
+    footer {
+      padding-top: 0;
+    }
+    body > header {
+        padding-bottom: 2.0rem;
+    }
+    body > main {
+        padding-top: 0;
+        padding-bottom: 1.65rem;
+    }
+    body > footer {
+        padding-top: 0;
+    }
   </style>
 </head>
 <body>
