--- a/index.html
+++ b/index.html
@@ -37,6 +37,23 @@
         <div class="jumbotron">
             <h1>Welcome to the Housing Hope Data Team Infobase</h1>
             <p class="lead">Your home base for accessing a wide range of training guides and tools. Here, you'll find essential resources to assist you with completing tasks in systems like Apricot and ADP, as well as our comprehensive Unit Type Dictionary and other valuable materials provided by the Data Team.</p>
+            
+            <!-- Tristan's Resource Website Banner -->
+            <div class="mt-4 p-3 bg-info text-white rounded">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h5 class="mb-1">
+                            <a href="https://snocohelp.com" target="_blank" class="text-white text-decoration-none">
+                                <strong>Tristan's Resource Website</strong>
+                            </a>
+                        </h5>
+                        <p class="mb-0 small">A collection of occasionally useful resources for human and community services professionals.</p>
+                    </div>
+                    <a href="https://snocohelp.com" target="_blank" class="btn btn-outline-light btn-sm">
+                        Visit Site
+                    </a>
+                </div>
+            </div>
         </div>
 
         <div class="row align-items-md-stretch">
