--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
                         <h5 class="mb-1">
-                            <a href="https://snocohelp.com" target="_blank" class="text-white text-decoration-none">
+                            <a href="http://snocohelp.com" target="_blank" class="text-white text-decoration-none">
                                 <strong>Tristan's Resource Website</strong>
                             </a>
                         </h5>
