modified:   index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </h5>
                         <p class="mb-0 small">A collection of occasionally useful resources for human and community services professionals.</p>
                     </div>
-                    <a href="https://snocohelp.com" target="_blank" class="btn btn-outline-light btn-sm">
+                    <a href="http://snocohelp.com" target="_blank" class="btn btn-outline-light btn-sm">
                         Visit Site
                     </a>
                 </div>
