--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <!-- Navigation Cards -->
-        <div class="row">
+        <div class="row gy-4">
             <div class="col-md-4">
                 <div class="nav-card">
                     <div class="nav-card-icon documents">
