Fix minor typos and improve clarity in 4.html regarding project deactivation and ethnicity detail instructions.

--- a/4.html
+++ b/4.html
@@ -468,7 +468,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">2. All clients in the closing HMIS shelter project must be exited</div>
                             <div class="line line-context">3. All clients that spend the first night in the new HMIS shelter must have data collected for</div>
                             <div class="line line-context">a new shelter project entry</div>
-                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed.</div>
+                            <div class="line line-context">4. The old shelter project should be disabled/deactivated from entry in the system (i.e. closed).</div>
                             <div class="line line-removed">Projects that target certain populations are advised that nothing in these standards allows for</div>
                             <div class="line line-removed">circumventing fair housing laws. The Fair Housing Act (FHA) prohibits discrimination because</div>
                             <div class="line line-removed">of, among other things, familial status. Except where otherwise permitted by the federal program</div>
@@ -585,7 +585,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">ask the client to provide their</div>
                             <div class="line line-context">race/ethnicity.</div>
                             <div class="line line-context">Additional Race and [Text] Provide additional specificity the client</div>
-                            <div class="line line-context">Ethnicity Detail would like the share about their race or</div>
+                            <div class="line line-context">Ethnicity Detail would like to share about their race or ethnicity.</div>
                             <div class="line line-removed">To indicate client's self-identification with one or more of the gender categories. Supports</div>
                             <div class="line line-removed">system planning, and local and national understanding of who is experiencing homelessness.</div>
                             <div class="line line-removed">Data Collection Instruction</div>
@@ -677,7 +677,7 @@ I'll implement Approach 2 (Interactive Executive Summary) as it provides the bes
                             <div class="line line-context">ask the client to provide their</div>
                             <div class="line line-context">race/ethnicity.</div>
                             <div class="line line-context">Additional Race and [Text] Provide additional specificity the client</div>
-                            <div class="line line-context">Ethnicity Detail would like the share about their race or</div>
+                            <div class="line line-context">Ethnicity Detail would like to share about their race or ethnicity.</div>
                             <div class="line line-context">3.07 Veteran Status</div>
                             <div class="line line-context">To indicate whether clients have ever spent time in the United States Armed Forces and may be</div>
                             <div class="line line-context">eligible for VA Homeless Programs. Allows for an accurate count of how many Veterans</div>
